# yppm

./: .gitignore  .gitmodules  Dev.sh  Install.sh  LICENSE  README.md  Tools.py  nuitka-crash-report.xml  pyproject.toml  yppm.sh
garbage_bin/: Install.sh
yppm/: __main__.py  _todo.py  main.py
yppm/auto_everything/: io.py  python.py  string_.py
yppm/resources/: .gitignore
yppm/resources/backend_and_frontend_project/: package.json
yppm/resources/backend_and_frontend_project/protocol/: question_and_answer.proto
yppm/resources/basic_python_project/: main.py
yppm/resources/http_python_message_board/: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  needs.txt  work.py
yppm/resources/magic_magnet/: .dockerignore  .gitignore  Dockerfile_light  Dockerfile_magic_magnet_python  README.md  Tools.py  app.py  docker-compose.light.yaml  docker-compose.magic_magnet_python.yaml  download_auto_everything_for_docker.sh  entrypoint.sh  package.json
yppm/resources/magic_magnet/generated_yrpc/: ytorrent_server_and_client_protocol_auto_everything_based_pure_python_rpc.py  ytorrent_server_and_client_protocol_objects.py  ytorrent_server_and_client_protocol_pure_python_rpc.py  ytorrent_server_and_client_protocol_pure_python_rpc_client.py  ytorrent_server_and_client_protocol_rpc.py  ytorrent_server_and_client_protocol_yingshaoxo_database_rpc.py
yppm/resources/magic_magnet/protocols/: ytorrent_server_and_client_protocol.proto
yppm/resources/question_and_answer_community/: .gitignore  Dockerfile  README.md  Tools.py  docker-compose.service.yaml  index.html  main.py  package.json
yppm/resources/question_and_answer_community/back_end/: .gitignore  README.md  complete.py  main.py
yppm/resources/question_and_answer_community/front_end/: .gitignore  README.md  core-js_source_code.7z  package.json  set_npm_mirror.sh
yppm/resources/question_and_answer_community/protocol/: question_and_answer.proto
yppm/resources/simple_backend_and_frontend_project/: .gitignore  README.md  Tools.py  package.json
yppm/resources/simple_backend_and_frontend_project/back_end/: .gitignore  README.md  (+1 more)
yppm/resources/webpage_chat_application/: .gitignore  README.md  chat.py  complete.py  docker-compose.yaml  main.py  super_completor.py  test.py  work.py
yppm/resources/webpage_chat_application1/: Dockerfile  complete.py
(+45 files in other folders)
