[project]
name = "yppm"
version = "0.0.1"
authors = [
  { name="yingshaoxo", email="yingshaoxo@gmail.com" },
]
description = "Yingshaoxo Python Package Manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yingshaoxo/yppm"
"Bug Tracker" = "https://github.com/yingshaoxo/yppm/issues"

[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"