[project]
name = "yppm"
version = "0.0.4"
authors = [
  { name="yingshaoxo", email="yingshaoxo@gmail.com" },
]
description = "Yingshaoxo Python Package Manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'auto_everything==3.25',
  'pyinstaller==5.13.0'
]

[tool.setuptools]
py-modules = [
    'yppm'
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mypkg = ["*.sh", "*.md"]

[project.urls]
"Homepage" = "https://github.com/yingshaoxo/yppm"
"Bug Tracker" = "https://github.com/yingshaoxo/yppm/issues"

[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"